# ler1

./: .dockerignore  .env.example  .gitignore  Anchor.toml  Cargo.toml  DEMO-SCRIPT.md  Dockerfile  README.md  SUBMISSION.md  VIDEO-EDIT-GUIDE.md  package-lock.json  package.json  railway.json
evidence/: full-fixture-run-2026-07-19.json  reference-run-2026-07-19.json
fixtures/authentic/: france-spain-18237038.json
programs/roarline-receipts/: Cargo.toml  README.md
programs/roarline-receipts/src/: lib.rs
scripts/: activate.mjs  build-hero-replay.mjs  build-receipt-program.mjs  full-fixture-evidence.mjs  judge.mjs  record-live-capture.sh  resubmit-receipts.mjs
server/: config.mjs  evidence.mjs  hub.mjs  index.mjs  ledger.mjs  proofs.mjs  receipts.mjs
server/engine/: commentary.mjs  drama.mjs  room.mjs  state.mjs
server/sources/: hero.mjs  live.mjs  replay.mjs  sim.mjs
server/txline/: client.mjs  normalize.mjs
test/: engine.test.mjs  receipts.test.mjs  replay-evidence.test.mjs
web/: evidence.html  index.html  manifest.webmanifest  publisher-demo.html
web/css/: style.css
web/embed/: roarline-match.js
web/js/: app.js  audio.js  cards.js  i18n.js  pitch.js  river.js
